@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-10-25 mmichaud <michael.michaud@free.fr>
+  * ClipToFencePlugIn : centre dialog box and check visible layers only as the 
+    default option (more safe)
+  
 2012-10-21 mmichaud <michael.michaud@free.fr>
   * Better separation of logic and UI in PlanarGraphPlugIn + some improvements 
   
